[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "fastembed>=0.7.4",
    "inngest>=0.5.15",
    "llama-index>=0.14.13",
    "qdrant-client>=1.16.2",
    "sentence-transformers",
    "streamlit>=1.53.1",
    "uvicorn>=0.40.0",
]
